# PRISM---MASAHackathon2026

./: .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  Makefile  PROJECT.md  README.md  pyrefly.toml
.claude/: ralph-loop.local.md
analysis/R/: analysis.Rmd
analysis/python/: analysis.ipynb
analysis/shiny/: app.R
app/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  main.py  pipeline.py  pyproject.toml  requirements.txt  scoping.py
backend/migrations/: apply.py
backend/models/: meta.json
backend/tests/: test_agent.py  test_regression_anchors.py  test_scoping.py
data/: README.md  global_panel_clean.csv  sea_panel_clean.csv
deliverables/: 00_executive_one_pager.md  01_report.md  02_pitch_deck_outline.md  03_pitch_script.md  04_vietnam_vs_philippines_deep_dive.md  05_cedent_screening_framework.md  06_policy_crosswalk.md  07_qa_briefing.md  11_indonesia_counterfactual.md  12_stress_refresh_playbook.md  13_judge_demo_guide.md  ai_usage.md
docs/: app_prd.md  app_prd_v2_champion.md  code_documentation.md
docs/brief/: 01_introduction_and_timeline.md  02_problem_statement.md  03_rules_and_regulations.md  04_judging_and_submission.md
docs/session_reports/: 2026-05-06_pipeline-hardening.md
frontend/: .env.example  README.md  package-lock.json  package.json
serve/: .env.example  README.md  agent.py  main.py  pipeline.py  pyproject.toml  requirements.txt  scoping.py  supabase_client.py
(+99 files in other folders)
