[project]
name = "prism-serve"
version = "1.0.0"
description = "PRISM live-pipeline FastAPI — serves the M3a / M3b XGBoost models exported from the analysis notebook."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "xgboost>=3.0",
    "numpy>=2.0",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "supabase>=2.10",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
